--- a/styles/CounterSection.module.css
+++ b/styles/CounterSection.module.css
@@ -6,6 +6,7 @@
     justify-content: center;
     align-items: center;
     margin-top: 150px;
+    margin-bottom: 150px;
     padding: 80px 100px;
     background-image: url("../public/images/CounterSection.webp");
     background-repeat: no-repeat;
