--- a/styles/addlesson.module.css
+++ b/styles/addlesson.module.css
@@ -29,6 +29,7 @@
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     padding: 20px;
+    width: 51.5%;
   }
 
   .form_container label {
