--- a/styles/forgotpass.module.css
+++ b/styles/forgotpass.module.css
@@ -76,9 +76,9 @@
     white-space: nowrap;
     width: 320px;
     height: 45px;
-    background-color: #81b536;
+    background-color: #00eda4;
     background-image: none;
-    box-shadow: 0 2px 0 0 #709a3c;
+    box-shadow: 0 2px 0 0 #00eda4;
     border-radius: 4px;
     font-family: system-ui,Roboto,Arial,sans-serif;
     font-size: 16px;
