--- a/styles/footer.module.css
+++ b/styles/footer.module.css
@@ -309,4 +309,50 @@
     border: none;
     font-size: 20px;
     cursor: pointer;
+  }/* Trong tệp CSS của bạn */
+
+  .avatar_container {
+    position: relative;
+    display: inline-block;
+  }
+  
+  
+  .menu {
+    position: absolute;
+    top: 100%;
+    right: 0; /* Đổi từ left thành right */
+    background-color: black;
+    color: white;
+    width: 200px; /* Độ rộng menu */
+    height: 150px; /* Độ cao menu */
+    padding: 10px;
+    display: none;
+    z-index: 9999;
+    border-radius: 10%;
+  }
+  
+  
+  .avatar_container:hover .menu {
+    display: block;
+  }
+  
+  .avatar {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+  }
+  
+  /* Các kiểu dáng bổ sung tùy chọn */
+  .menu a {
+    display: block;
+    margin: 10px;
+    text-decoration: none;
+    color: white;
+    font-size: 15px; /* Độ lớn của chữ trong thẻ a */
+  }
+  
+  .menu a:hover {
+    background-color: gray;
+    color: linear-gradient(to right, #00eda4, #6a7df1);
+    font-size: 19px; /* Độ lớn của chữ trong thẻ a khi hover */
   }
