--- a/styles/policy.module.css
+++ b/styles/policy.module.css
@@ -28,7 +28,7 @@
   .modal label {
     display: block;
     margin-bottom: 10px;
-    font-weight: bold;
+    margin-top: 10px;
     color: #555;
   }
   
@@ -46,6 +46,7 @@
     font-weight: bold;
     cursor: pointer;
     transition: background-color 0.3s;
+    margin: 20px;
   }
   
   .modal button:disabled {
