--- a/styles/sidenav.module.css
+++ b/styles/sidenav.module.css
@@ -1,76 +1,87 @@
 .sidenav {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 60px;
-    height: 100vh;
-    background-color: #0c0c0cda;
-    transition: width 0.3s ease;
-  }
-  
-  .open {
-    width: 200px;
-  }
-  
-  .toggleButton {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 60px;
-    background-color: #0e0e0e;
-    border: none;
-    outline: none;
-    cursor: pointer;
-  }
-  
-  .toggleButton svg {
-    font-size: 24px;
-  }
-  
-  .navList {
-    list-style: none;
-    margin: 20px 0;
-    padding: 0;
-  }
-  
-  .navItem {
-    padding: 10px 0;
-  }
-  
-  .navItem a {
-    display: block;
-    padding: 10px;
-    color: #f4eeeef8;
-    text-decoration: none;
-    transition: background-color 0.3s ease;
-  }
-  
-  .navItem a:hover {
-    background-color: #080808c7;
-  }
-  
-  .settingsMenu {
-    position: absolute;
-    bottom: 20px;
-    left: 20px;
-  }
-  
-  .settingsMenu a {
-    display: block;
-    padding: 10px;
-    color: #333;
-    text-decoration: none;
-    transition: background-color 0.3s ease;
-    
-  }
-  .settingsMenu h1 {
-    display: block;
-    padding: 10px;
-    margin-left: 100px;
-  }
-  
-  .settingsMenu a:hover {
-    background-color: #191818e0;
-  }
-  
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 70px;
+  height: 100vh;
+  z-index: 9999;
+  background-color: #0c0c0cda;
+  transition: width 0.3s ease;
+}
+
+.open {
+  width: 200px;
+}
+
+.toggleButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 60px;
+  background-color: #0e0e0e;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
+.toggleButton svg {
+  font-size: 24px;
+}
+
+.logo {
+  width: 32px;
+  height: 32px;
+  transition: background-color 0.3s ease;
+}
+
+.logoHover {
+  width: 100px;
+  height: 40px;
+}
+
+.navList {
+  list-style: none;
+  margin: 20px 0;
+  padding: 0;
+}
+
+.navItem {
+  padding: 10px 0;
+}
+
+.navItem a {
+  display: block;
+  padding: 10px;
+  color: #f4eeeef8;
+  text-decoration: none;
+  transition: background-color 0.3s ease;
+}
+
+.navItem a:hover {
+  background-color: #080808c7;
+}
+
+.settingsMenu {
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+}
+
+.settingsMenu a {
+  display: block;
+  padding: 10px;
+  color: #333;
+  text-decoration: none;
+  transition: background-color 0.3s ease;
+}
+
+.settingsMenu h1 {
+  display: block;
+  padding: 10px;
+  margin-left: 100px;
+}
+
+.settingsMenu a:hover {
+  background-color: #191818e0;
+}
