--- a/styles/policy.module.css
+++ b/styles/policy.module.css
@@ -12,12 +12,14 @@
   
   .modal_content {
     background-color: #fff;
-    width: 1000px;
-    height: 500px;
-  padding: 40px;
+    width: 100%;
+    height: 100%;
+    padding: 40px;
     text-align: center;
     border-radius: 4px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    max-height: 100%;
+  overflow-y: auto;
   }
   
   .modal h2 {
@@ -26,7 +28,6 @@
   }
   
   .modal label {
-    display: block;
     margin-bottom: 10px;
     margin-top: 10px;
     color: #555;
@@ -57,4 +58,22 @@
   .modal button:not(:disabled):hover {
     background-color: #0056b3;
   }
+  .container_profile{
+    display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+  }
+  .profile_field {
+    grid-column: 1;
+  }
   
+  .payment {
+    grid-column: 2;
+  }
+  .website{
+    width: 100%;
+  }
+  .form_profile{
+    margin-top: 50px;
+    margin-bottom: 30px;
+  }
