--- a/styles/checkout.module.css
+++ b/styles/checkout.module.css
@@ -1,5 +1,5 @@
 .payment_container {
-    max-width: 600px;
+    max-width: 1100px;
     margin: 0 auto;
     padding: 20px;
   }
@@ -19,6 +19,10 @@
   .user_info {
     margin-bottom: 20px;
     text-align: center;
+    
+  }
+  .user_info a{
+    text-decoration: none;
   }
   
   .user_greeting {
