--- a/styles/coursesdetail.module.css
+++ b/styles/coursesdetail.module.css
@@ -73,7 +73,7 @@
   }
   .container .left_content .info::after {
     position: absolute;
-    left: 43%;
+    left: 55%;
     content: "";
     display: block;
     width: 4px;
@@ -291,6 +291,7 @@
     padding: 30px 0;
     cursor: pointer;
     list-style: none;
+    margin-left: 200px;
   }
   #fa_wordpress {
     background-color: var(--second-color);
@@ -717,6 +718,7 @@
   #dtlms_course_curriculum_popup {
     background-color: #fff;
     border-radius: 10px;
+    padding: 50px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   }
   
@@ -727,11 +729,13 @@
     margin-bottom: 20px;
     background-color: #f9f9f9aa;
     padding: 30px 20px 30px 40px;
+    margin-top: 50px;
   }
   
   .dtlmsCourseCurriculumPopupHeader h2 {
     flex: 1;
     margin: 0;
+    display: inline-block;
   }
   .dtlmsCourseCurriculumPopupHeader h3 {
     flex: 2;
@@ -742,6 +746,7 @@
   .dtlmsCourseCurriculumPopupHeader h2 {
     font-size: 24px;
     font-weight: bold;
+    
   }
   
   .dtlmsCourseCurriculumPopupHeader img {
@@ -775,11 +780,12 @@
     padding-left: 5px;
   }
   .dtlmsCloseCourseCurriculumPopup {
-    display: flex;
+    display: inline-block;
     align-items: center;
     width: 50px;
     height: 50px;
     padding-left: 5px;
+    float: right;
   }
   
   
