--- a/styles/footer.module.css
+++ b/styles/footer.module.css
@@ -25,8 +25,16 @@
     background: #222222 !important;
   }
   #container_header{
-    background-color: #030303;
     padding: 0 150px;
+    position:fixed;
+    
+    left: 0;
+    right: 0;
+    z-index: 90;
+
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
+    background: rgba(255, 255, 255, 0.178);
   }
   /* ====  above-nav ===== */
   .header .container .above_nav {
@@ -55,7 +63,6 @@
   .account {
     display: inline-flex;
     cursor: pointer;
-    margin-top: 15px;
     float: right;
   }
   .account a:hover {
@@ -89,8 +96,8 @@
   .under_nav {
     display: flex;
     justify-content: space-between;
-    height: 60px;
-    margin-top: 15px;
+    align-items: center ;
+    height: 80px;
   }
   .list_nav {
     display: flex;
@@ -105,12 +112,15 @@
   }
   .list_nav a {
     display: flex;
-    font-size: 16px;
-    color: aliceblue;
+    font-size: 20px;
+    font-weight: bold;
+    color: #00eda4;
+
     text-decoration: none;
     /* background-color: orange; */
     margin: 0 10px;
     padding-bottom: 100px;
+
   }
   .list_nav li:hover > a {
     color: #00eda4;
@@ -320,15 +330,17 @@
   .menu {
     position: absolute;
     top: 100%;
-    right: 0; /* Đổi từ left thành right */
     background-color: black;
-    color: white;
+    color: #00eda4;
     width: 200px; /* Độ rộng menu */
     height: 150px; /* Độ cao menu */
     padding: 10px;
     display: none;
     z-index: 9999;
     border-radius: 10%;
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
+    background: rgba(255, 255, 255, 0.178);
   }
   
   
@@ -347,12 +359,10 @@
     display: block;
     margin: 10px;
     text-decoration: none;
-    color: white;
+    color: black;
     font-size: 15px; /* Độ lớn của chữ trong thẻ a */
   }
   
   .menu a:hover {
-    background-color: gray;
     color: linear-gradient(to right, #00eda4, #6a7df1);
-    font-size: 19px; /* Độ lớn của chữ trong thẻ a khi hover */
   }
