--- a/styles/footer.module.css
+++ b/styles/footer.module.css
@@ -31,10 +31,7 @@
     left: 0;
     right: 0;
     z-index: 90;
-
-    -webkit-backdrop-filter: blur(10px);
-    backdrop-filter: blur(10px);
-    background: rgba(255, 255, 255, 0.178);
+    background-color: #222222;
   }
   /* ====  above-nav ===== */
   .header .container .above_nav {
@@ -101,6 +98,7 @@
   }
   .list_nav {
     display: flex;
+    margin: 0;
   }
   .list_nav li a {
     display: flex;
@@ -112,9 +110,8 @@
   }
   .list_nav a {
     display: flex;
-    font-size: 20px;
-    font-weight: bold;
-    color: #00eda4;
+    font-size: 16px;
+    color: #ffffff;
 
     text-decoration: none;
     /* background-color: orange; */
