--- a/styles/profile.module.css
+++ b/styles/profile.module.css
@@ -145,45 +145,52 @@
     height: 50px;
   }
   
-  .settingsMenu {
-    position: absolute;
-    bottom: 20px;
-    left: 20px;
+  
+  
+  
+  .avatar_container {
+    position: relative;
+    display: inline-block;
     float: right;
-    display: contents;
   }
-  .title_settingsMenu{
-    margin-left: 100px;
-  }
-  .settingsMenu a {
-    display: block;
-    padding: 10px;
-    color: #333;
-    text-decoration: none;
-    transition: background-color 0.3s ease;
-    width: 30px;
-    float: right;
-    font-size: 20px;
-  }
+  
+  
   .menu {
     position: absolute;
     top: 100%;
-    left: 0;
-    background-color: black; /* Nền đen */
+    right: 0; /* Đổi từ left thành right */
+    background-color: black;
     color: white;
+    width: 200px; /* Độ rộng menu */
+    height: 150px; /* Độ cao menu */
     padding: 10px;
-    border-radius: 4px;
-    z-index: 999; /* Đảm bảo menu hiển thị trên các phần khác */
-  }
-  
-  .menu ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
-  
-  .menu ul li {
-    padding: 5px 0;
+    display: none;
+    z-index: 9999;
+    border-radius: 10%;
   }
   
   
+  .avatar_container:hover .menu {
+    display: block;
+  }
+  
+  .avatar {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+  }
+  
+  /* Các kiểu dáng bổ sung tùy chọn */
+  .menu a {
+    display: block;
+    margin: 10px;
+    text-decoration: none;
+    color: white;
+    font-size: 15px; /* Độ lớn của chữ trong thẻ a */
+  }
+  
+  .menu a:hover {
+    
+    color:  #00eda4;
+    
+  }
